# soksak-sidecar-db-studio

./: Cargo.toml  README.md  stage.sh
.github/workflows/: release.yml
gate/: README.md  cases.json  rules.json
release/: unit.json
src/: gate.rs  lib.rs  main.rs  service.rs
tests/: wire.rs
validation/: spec-validator.json
